# reprogate

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  WORKSPACE-PROFILE.md  changed_files.txt  pr_body.md  pyproject.toml  reprogate.yaml  requirements.txt
.claude/agents/: executor.md  gsd-debugger.md  gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-verifier.md  planner.md  verifier.md
.claude/commands/: .gitignore  rg-discuss.md  rg-execute.md  rg-health.md  rg-plan.md  rg-summary.md  rg-verify.md
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SDD-LABELS.md
.github/ISSUE_TEMPLATE/: boundary-change.yml  (+3 more)
.planning/: MILESTONE-REVIEWS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.specify/: README.md
config/: ai-ops.schema.json  dpc.schema.json
docs/: CHANGELOG.md  PROGRESS.md  README.md  STRUCTURE.md  architecture.md  constitution.md  dpc-intro.md  installation.md  operating-model.md  ops-bootstrap-master-plan.md  presets-spec.md  rules-dsl-spec.md  vision.md  why-ai-ops.md  work-packet-spec.md
scripts/: _config.py  check_compliance.py  cli.py  create_record.py  disable.py  gatekeeper.py  generate.py  init.py  install_git_hooks.sh  launch_ai_ops_session.py  launch_dpc_session.py  opa_wrapper.py  search_docs.py  set_process_context.py  sync_omc_policy.sh  validate_product_definition.py
templates/: AGENTS.md.j2  WORKSPACE-PROFILE.md.j2  dpc.config.yaml.j2  reprogate.yaml.j2
(+250 files in other folders)
