[project]
name = "reprogate-repo-tooling"
version = "0.1.0"
description = "Repository tooling for ReproGate"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.28",
]

[project.scripts]
reprogate = "scripts.cli:main"

[tool.reprogate]
python_toolchain = "uv"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
