[project]
name = "reprogate-repo-tooling"
version = "0.1.0"
description = "Repository tooling for ReproGate"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.reprogate]
python_toolchain = "uv"
